src/test/minijava/success/Basic.mjava
public class Basic {

    public static void main(String[] args) {
        int i = 1;
        int j = i + 1;
    }
}