src/test/minijava/error/DoubleMain.mjava
class DoubleMain {
}

public class DoubleMain {
    // Erreur: classe principale a le même nom que classe déjà définie
    public static void main(String[] args) {

    }
}